--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
   "homepage": "https://github.com/abhiaiyer91/How-We-Redux-Todos#readme",
   "dependencies": {
     "classnames": "^2.2.1",
-    "react": "^15.0.2",
-    "react-addons-pure-render-mixin": "^15.0.2",
-    "react-dom": "^15.0.2",
+    "react": "^15.2.1",
+    "react-addons-create-fragment": "^15.2.1",
+    "react-addons-pure-render-mixin": "^15.2.1",
+    "react-dom": "^15.2.1",
     "react-paginate": "^1.0.5",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
-    "redux-logger": "^2.3.1",
-    "redux-thunk": "^2.0.1"
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "redux-devtools": "^3.3.1",
